iptables/dmit-us/iptables.conf
# Generated by iptables-save v1.8.7 on Mon Oct 17 13:03:22 2022
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [12939:535556]
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK SYN,ACK -m state --state NEW -j LOG --log-prefix "deny: (SYN,ACK new)"
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK SYN,ACK -m state --state NEW -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1000/sec -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1000/sec -j LOG --log-prefix "Iptables deny (--syn limit100"
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j LOG --log-prefix "Iptables deny (ALL SYN,RST,AC"
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j LOG --log-prefix "Iptables deny (ALL ALL): "
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j LOG --log-prefix "Iptables deny ALL FIN,URG,PSH"
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j LOG --log-prefix "Iptables deny SYN,RST SYN,RST"
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j LOG --log-prefix "Iptables deny SYN,FIN SYN,FIN"
-A INPUT -p icmp -j DROP
-A INPUT -p icmp -j LOG --log-prefix "Iptables deny icmp: "
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2022 -j ACCEPT
-A INPUT -s 103.135.251.104/32 -p tcp -m tcp --dport 1443 -j ACCEPT
-A INPUT -s 103.135.251.104/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -p tcp -j ACCEPT
# 中国移动 start
-A INPUT -s 111.18.0.0/16 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 117.136.87.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
# 中国移动 end
-A INPUT -s 59.55.137.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 43.136.5.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 36.158.253.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 219.144.89.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 219.144.88.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 121.51.60.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 121.51.180.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 121.51.159.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 121.51.15.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 121.51.117.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 117.44.77.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 117.162.61.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 117.162.51.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 116.162.152.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 116.153.85.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 116.153.83.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.96.246.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.219.202.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.201.154.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 113.200.123.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 111.20.29.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 111.20.28.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 101.91.91.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j LOG --log-prefix "deny not cdn ip: "
-A INPUT -p tcp -m tcp --dport 443 -j DROP
-A INPUT -p tcp -m tcp --dport 31024:65000 -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK SYN,ACK -m state --state NEW -j LOG --log-prefix "deny: (SYN,ACK new)"
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK SYN,ACK -m state --state NEW -j DROP
-A INPUT -p icmp -j LOG --log-prefix "Iptables deny icmp: "
-A INPUT -p icmp -j DROP
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j LOG --log-prefix "Iptables deny SYN,FIN SYN,FIN"
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN FIN,SYN -j DROP
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j LOG --log-prefix "Iptables deny SYN,RST SYN,RST"
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags SYN,RST SYN,RST -j DROP
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j LOG --log-prefix "Iptables deny ALL FIN,URG,PSH"
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,PSH,URG -j DROP
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j LOG --log-prefix "Iptables deny (ALL ALL): "
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,PSH,ACK,URG -j DROP
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j LOG --log-prefix "Iptables deny (ALL SYN,RST,AC"
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,PSH,ACK,URG FIN,SYN,RST,ACK,URG -j DROP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1000/sec -j LOG --log-prefix "Iptables deny (--syn limit100"
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1000/sec -j ACCEPT
-A INPUT -j LOG --log-prefix "deny rest port"
-A INPUT -j DROP
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1/sec -j LOG --log-prefix "Iptables deny syn: "
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m limit --limit 1/sec -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j LOG --log-prefix "Iptables deny echo-request: "
-A FORWARD -p icmp -m icmp --icmp-type 8 -m limit --limit 1/sec -j ACCEPT
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -m limit --limit 1/sec -j LOG --log-prefix "Iptables deny (SYN,ACK,FIN,RS"
-A FORWARD -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK RST -m limit --limit 1/sec -j ACCEPT
COMMIT
# Completed on Mon Oct 17 13:03:22 2022
